# STS

./: README.md
BvhDataParser/: CMakeLists.txt  README.md
BvhDataParser/data/: 1.bvh  113_15.bvh
BvhDataParser/include/: readBvh.h  writeNeo4j.h
BvhDataParser/src/: main.cpp  readBvh.cpp  writeNeo4j.cpp
OpenPose_Json_Read/: OpenPose.py
